// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ignore.js - {"trailingComma":"all"} format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
trailingComma: "all"
                                                                                | printWidth
=====================================input======================================
const {
  // prettier-ignore
  bar =           1,
} = foo

const {
  _,
  // prettier-ignore
  bar2 =           1,
} = foo

/* comments */
const {
  // prettier-ignore
  bar3 =           1,         // comment
} = foo

const {
  // prettier-ignore
  bar4 =           1,         /* comment */
} = foo

const {
  // prettier-ignore
  bar5 =           /* comment */          1,
} = foo

/* RestElement */
const {
  // prettier-ignore
  ...bar6
} = foo

// Nested
const {
  baz: {
  // prettier-ignore
  foo2 = [1, 2,    3]
},
  // prettier-ignore
  bar7 =            1,
} = foo

=====================================output=====================================
const {
  // prettier-ignore
  bar =           1,
} = foo;

const {
  _,
  // prettier-ignore
  bar2 =           1,
} = foo;

/* comments */
const {
  // prettier-ignore
  bar3 =           1, // comment
} = foo;

const {
  // prettier-ignore
  bar4 =           1 /* comment */,
} = foo;

const {
  // prettier-ignore
  bar5 =           /* comment */          1,
} = foo;

/* RestElement */
const {
  // prettier-ignore
  ...bar6
} = foo;

// Nested
const {
  baz: {
    // prettier-ignore
    foo2 = [1, 2,    3],
  },
  // prettier-ignore
  bar7 =            1,
} = foo;

================================================================================
`;

exports[`ignore.js - {"trailingComma":"none"} format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
trailingComma: "none"
                                                                                | printWidth
=====================================input======================================
const {
  // prettier-ignore
  bar =           1,
} = foo

const {
  _,
  // prettier-ignore
  bar2 =           1,
} = foo

/* comments */
const {
  // prettier-ignore
  bar3 =           1,         // comment
} = foo

const {
  // prettier-ignore
  bar4 =           1,         /* comment */
} = foo

const {
  // prettier-ignore
  bar5 =           /* comment */          1,
} = foo

/* RestElement */
const {
  // prettier-ignore
  ...bar6
} = foo

// Nested
const {
  baz: {
  // prettier-ignore
  foo2 = [1, 2,    3]
},
  // prettier-ignore
  bar7 =            1,
} = foo

=====================================output=====================================
const {
  // prettier-ignore
  bar =           1
} = foo;

const {
  _,
  // prettier-ignore
  bar2 =           1
} = foo;

/* comments */
const {
  // prettier-ignore
  bar3 =           1 // comment
} = foo;

const {
  // prettier-ignore
  bar4 =           1 /* comment */
} = foo;

const {
  // prettier-ignore
  bar5 =           /* comment */          1
} = foo;

/* RestElement */
const {
  // prettier-ignore
  ...bar6
} = foo;

// Nested
const {
  baz: {
    // prettier-ignore
    foo2 = [1, 2,    3]
  },
  // prettier-ignore
  bar7 =            1
} = foo;

================================================================================
`;

exports[`ignore.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
const {
  // prettier-ignore
  bar =           1,
} = foo

const {
  _,
  // prettier-ignore
  bar2 =           1,
} = foo

/* comments */
const {
  // prettier-ignore
  bar3 =           1,         // comment
} = foo

const {
  // prettier-ignore
  bar4 =           1,         /* comment */
} = foo

const {
  // prettier-ignore
  bar5 =           /* comment */          1,
} = foo

/* RestElement */
const {
  // prettier-ignore
  ...bar6
} = foo

// Nested
const {
  baz: {
  // prettier-ignore
  foo2 = [1, 2,    3]
},
  // prettier-ignore
  bar7 =            1,
} = foo

=====================================output=====================================
const {
  // prettier-ignore
  bar =           1,
} = foo;

const {
  _,
  // prettier-ignore
  bar2 =           1,
} = foo;

/* comments */
const {
  // prettier-ignore
  bar3 =           1, // comment
} = foo;

const {
  // prettier-ignore
  bar4 =           1 /* comment */,
} = foo;

const {
  // prettier-ignore
  bar5 =           /* comment */          1,
} = foo;

/* RestElement */
const {
  // prettier-ignore
  ...bar6
} = foo;

// Nested
const {
  baz: {
    // prettier-ignore
    foo2 = [1, 2,    3],
  },
  // prettier-ignore
  bar7 =            1,
} = foo;

================================================================================
`;
